--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "axios": "^1.13.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "typescript": "4.9.5",
-    "react-markdown": "^9.0.1"
-  
-},
-
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
